src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Info_Source__c</fullName>
        <label>Info Source</label>
        <picklist>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web/Mobile Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper/Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Exhibition Hall</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Info_Subsource__c</fullName>
        <label>Info Subsource</label>
        <picklist>
            <controllingField>Info_Source__c</controllingField>
            <picklistValues>
                <fullName>Air China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party (Partner) Mail_Minsheng Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party (Partner) Mail _Bank of Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB official website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sina Blog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart official website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese radio network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Phone Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Web, Community, Blog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Telecom/189 email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz E-newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz E-brochure and price list</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz Telephone Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer telephone contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Telephone Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products range cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure &amp; Price List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer message contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inquiry_Comments__c</fullName>
        <label>Inquiry Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MPC_Internal_Notes__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: MPC Internal Notes 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>MPC Internal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Vehicle&apos;s mileage at time of complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Mileage</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Contact_Date__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Next planned contact date 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Next Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OB_to_Customer__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Outbound to customer information 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>OB to Customer</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Type_Comments__c</fullName>
        <label>Other Type Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR_Comment_MBCL_Internal__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: PR Comments attached to the complaint, only seen by MBCL 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>PR Comment(MBCL Internal)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PR_Comment_for_Dealer__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: PR Comment for dealer 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>PR Comment for Dealer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Problem1__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Problem reason for complaint (1) 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Problem1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Problem2__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Problem reason for complaint (2) 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Problem2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Problem3__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Problem reason for complaint (3) 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Problem3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ref_No_Central__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Central document reference number 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Ref No. Central</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_No_Regional__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Regional document reference number 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Ref No Regional</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refused_Dealer_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Complainant refused dealer contact 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Refused Dealer Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Release date of complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Repeat_Complaint_Times__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Amount of repeat complaints for the same issue 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Repeat Complaint Times</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repeat_of_Original_Complaint__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Reference to repeat complaints 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Repeat of Original Complaint</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases(Repeat of Original Complain)</relationshipLabel>
        <relationshipName>Repeat_of_Original_Complaint</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requires_Dealer_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Complainant requires to contact dealer 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Requires Dealer Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Resolution to the complaint 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolved_Date__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Date the complaint was resolved 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Resolved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Result from BBAC 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Results_Response__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Case follow-up (between RO &amp; Dealer) 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Results Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFPositionDate__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Second Final Position Release Date 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>SFPositionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_OB_By__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Second outbound contact person 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Second OB By</label>
        <picklist>
            <picklistValues>
                <fullName>0=Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Regional Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Central Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Second_OB_Date__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Second outbound date 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Second OB Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_Email_To__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Proposed email contact for follow-up 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Send Email To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Setup_Date__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Date when the original issue occurred 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Setup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_Goodwill__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Flag whether customer is given goodwill 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Special Goodwill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suspended_Date__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Date the complaint was suspended 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Suspended Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suspended_Reason__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Reason the complaint was suspended 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Suspended Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TIPS__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: TIPs No. from another system 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>TIPS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TL_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TL Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Comments__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Technical Comments by CO 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Technical Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Third_OB_By__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Third outbound contact person 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Third OB By</label>
        <picklist>
            <picklistValues>
                <fullName>0=Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Regional Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Central Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Third_OB_Date__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Third outbound date 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Third OB Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vehicle_Brand__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  Chris.Huang
Function: 
Used in: Page Layouts, Reports 

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <formula>TEXT(Vehicle__r.Brand__c)</formula>
        <label>Vehicle Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Class__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  Chris.Huang
Function: 
Used in: Page Layouts, Reports 

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <formula>TEXT(Vehicle__r.Class__c)</formula>
        <label>Vehicle Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  Chris.Huang
Function: 
Used in: Page Layouts, Reports 

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <formula>TEXT(Vehicle__r.Model__c )</formula>
        <label>Vehicle Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <description>/*
Created by:  Chris.Huang
Used by:  Chris.Huang
Function:
Used in: Page Layouts, Reports 

Modify History
Modify By: 
Modify Reason: 
*/</description>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Feedback_required_Inquiry_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Feedback_Required__c</columns>
        <columns>TL_Reviewed__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Feedback_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Feedback_Required__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TL_Reviewed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Inquiry</value>
        </filters>
        <label>Feedback required Inquiry Cases</label>
        <language>en_US</language>
        <sharedTo>
            <roles>IB TL</roles>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Dealer_Complaint</fullName>
        <active>true</active>
        <businessProcess>Complaint Process</businessProcess>
        <label>Dealer Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inquiry</fullName>
        <active>true</active>
        <businessProcess>Inquiry Process</businessProcess>
        <description>Customer Inquiry Case</description>
        <label>Inquiry</label>
    </recordTypes>
</CustomObject>